# vibe-stats

./: .coverage  ARCHITECTURE.md  README.md  USAGE.md  junit.xml  proposal.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/vibe_stats/: __init__.py  aggregator.py  cache.py  cli.py  models.py  orchestrator.py  renderer.py
src/vibe_stats/github/: __init__.py  client.py  rate_limit.py
tests/: test_aggregator.py  test_cache.py  test_cli.py  test_client.py  test_models.py  test_orchestrator.py  test_rate_limit.py  test_renderer.py
