[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-stats"
version = "0.1.0"
description = "GitHub Organization code contribution statistics CLI tool"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
vibe-stats = "vibe_stats.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_stats"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
